<resources>
    <string name="app_name">HW_android_registration</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_e_mail">Enter your E-Mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="re_enter_your_password">Re-Enter your password</string>
    <string name="enter_your_birthday_date">Enter your birthday date: --/--/----</string>
    <string name="register">REGISTER</string>
    <string name="gender">Gender</string>
</resources>